--- a/app/src/main/res/layout/activity_menu_demo.xml
+++ b/app/src/main/res/layout/activity_menu_demo.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuDemo">
+    tools:context=".Menu.MenuDemo">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
