--- a/app/src/main/res/layout/activity_demo_alert.xml
+++ b/app/src/main/res/layout/activity_demo_alert.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="300dp"
-    tools:context=".DemoAlert">
+    tools:context=".Alerts.DemoAlert">
 
 
     <EditText
